# fcp-marker-trimmer

./: README.md  pyproject.toml
src/fcp_marker_trimmer/: cli.py  trim.py
